--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Blog para pruebas de la clase de Ingenieria de Software 
   Gracias por su visita.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://garciajarrison.github.io/" # the base hostname & protocol for your site
+url: "http://juberth24.github.io/" # the base hostname & protocol for your site
 twitter_username: juberthquintero
 github_username:  juberth24
 
